--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "history": "^5.1.0",
         "htmdx": "^0.3.6",
         "immer": "^9.0.6",
+        "observable-hooks": "^4.1.2",
         "path-browserify": "^1.0.1",
         "preact": "^10.5.13",
         "react-router-dom": "^6.0.1",
