--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "observable-hooks": "^4.1.2",
         "path-browserify": "^1.0.1",
         "preact": "^10.5.13",
+        "react-highlight-words": "^0.17.0",
         "react-router-dom": "^6.0.1",
         "remove-markdown": "^0.3.0",
         "rxjs": "^7.4.0"
@@ -29,6 +30,7 @@
         "@preact/preset-vite": "^2.0.0",
         "@types/lunr": "^2.3.4",
         "@types/path-browserify": "^1.0.0",
+        "@types/react-highlight-words": "^0.16.3",
         "typescript": "^4.3.2",
         "vite": "^2.6.4"
     }
