--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@emotion/css": "^11.5.0",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
+        "@monaco-editor/react": "^4.3.1",
         "@mui/icons-material": "^5.0.5",
         "@mui/lab": "^5.0.0-alpha.53",
         "@mui/material": "^5.0.6",
