switch to react

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,8 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "preserve",
-        "jsxFactory": "h",
-        "jsxFragmentFactory": "Fragment",
+        "jsx": "react-jsx",
         "strictNullChecks": false
     },
-    "include": ["src"]
+    "include": ["./src"]
 }
