--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
-        "serve": "vite preview"
+        "build": "tsc && vite build && npx terser --compress --mangle -o ./dist/docs.es.min.js -- ./dist/docs.es.js"
     },
     "dependencies": {
         "@emotion/css": "^11.5.0",
@@ -31,10 +30,11 @@
     "devDependencies": {
         "@types/lunr": "^2.3.4",
         "@types/path-browserify": "^1.0.0",
-        "@types/react-highlight-words": "^0.16.3",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/react-highlight-words": "^0.16.3",
         "@vitejs/plugin-react": "^1.0.0",
+        "rollup-plugin-delete": "^2.0.0",
         "typescript": "^4.3.2",
         "vite": "^2.6.4"
     }
