--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
         "lunr": "^2.3.9",
         "observable-hooks": "^4.1.2",
         "path-browserify": "^1.0.1",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
         "react-highlight-words": "^0.17.0",
         "react-router-dom": "^6.0.1",
+        "react-syntax-highlighter": "^15.4.5",
         "remove-markdown": "^0.3.0",
-        "rxjs": "^7.4.0",
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0"
+        "rxjs": "^7.4.0"
     },
     "devDependencies": {
         "@types/lunr": "^2.3.4",
@@ -33,6 +34,7 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/react-highlight-words": "^0.16.3",
+        "@types/react-syntax-highlighter": "^13.5.2",
         "@vitejs/plugin-react": "^1.0.0",
         "rollup-plugin-delete": "^2.0.0",
         "typescript": "^4.3.2",
