--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.7",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build && npx uglifyjs-folder dist -eo dist/min -x .js "
+        "build": "tsc && vite build && npx uglifyjs-folder dist -eo dist/min -x .js"
     },
     "dependencies": {
         "@emotion/css": "^11.5.0",
@@ -37,6 +37,7 @@
         "@types/react-syntax-highlighter": "^13.5.2",
         "@vitejs/plugin-react": "^1.0.0",
         "rollup-plugin-delete": "^2.0.0",
+        "rollup-plugin-typescript2": "^0.31.1",
         "typescript": "^4.3.2",
         "vite": "^2.6.4"
     }
